--- a/projeto_inicial/admin/telas/lista_cliente.html
+++ b/projeto_inicial/admin/telas/lista_cliente.html
@@ -20,7 +20,7 @@
         <nav>
             <ul class="cabecalho__lista-navegacao">
                 <li class="cabecalho__link"><a href="#">Dashboard</a></li>
-                <li class="cabecalho__link"><a href="#">Produtos</a></li>
+                <li class="cabecalho__link"><a href="./cadastro_produtos.html">Produtos</a></li>
                 <li class="cabecalho__link"><a href="#">Clientes</a></li>
                 <li class="cabecalho__link"><a href="#">Pets</a></li>
             </ul>
