--- a/projeto_inicial/admin/telas/lista_produto.html
+++ b/projeto_inicial/admin/telas/lista_produto.html
@@ -20,7 +20,7 @@
         <nav>
             <ul class="cabecalho__lista-navegacao">
                 <li class="cabecalho__link"><a href="#">Dashboard</a></li>
-                <li class="cabecalho__link"><a href="./lista_produto.html">Produtos</a></li>
+                <li class="cabecalho__link"><a href="#">Produtos</a></li>
                 <li class="cabecalho__link"><a href="#">Clientes</a></li>
                 <li class="cabecalho__link"><a href="#">Pets</a></li>
             </ul>
@@ -34,8 +34,7 @@
             <thead>
                 <tr>
                     <th class="tabela__coluna--p">Nome</th>
-                    <th class="tabela__coluna--p">Email</th>
-                    <th class="tabela__coluna--m tabela__alinhamento--direita"><a href="./cadastra_cliente.html"class="botao-simples botao-simples--adicionar">Novo Cliente</a></th>
+                    <th class="tabela__coluna--m tabela__alinhamento--direita"><a href="./cadastra_produto.html"class="botao-simples botao-simples--adicionar">Novo Produto</a></th>
                 </tr>
             </thead>
                 
@@ -51,51 +50,3 @@
 <script type="module" src="../controller/listaClientes-controller.js"></script>
 
 </html>
-        
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!--
-        <div class="modal-container modal--fechado">
-            <article class="modal">
-                <h2 class="modal__titulo">
-                    Excluir
-                </h2>
-                <button class="modal__fechar">X</button>
-                <p class="modal__texto">Deseja excluir essa entrada?</p>
-                <div class="modal__botao-container">
-                    <button class="modal__botao modal__botao--botao--confirmar">Excluir</button>
-                    <button class="modal__botao">Não excluir</button>
-                </div>
-            </article>
-        </div>
-    </main>
-</body>
-</html>
--->
-    <!--
-    <main class="container flex flex--centro flex--coluna">
-        <section class="cartao cadastro">
-            <h1 class="cartao__titulo">Cadastrar um produto</h1>
-            <form action="#" class="flex flex--coluna">
-                <div class="input-container">
-                    <input name="nome" class="input" placeholder="Nome">
-                    <label class="input-label" for="nome">Nome</label>
-                    <span class="input-mensagem-erro">Mensagem genérica de erro</span>
-
-                </div>
-            </form>
-        </section>
-    </main>
-        -->
